--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="nav-bar">
             <div class="brand">
                 <a href="#hero">
-                    <h5>Nishit Gohil</h5>
+                    <h1>Nishit Gohil</h1>
                 </a>
             </div>
             <div class="nav-list">
@@ -30,24 +30,26 @@
             </div>
         </header>
     </section>
+    <!-- End nav-bar  -->
 
     <!-- Hero Section  -->
     <section id="hero" class="hero container">
         <div class="hero-info">
             <h1 class="hero-info-heading">I Design <br>Your Dream</h1>
-            <p class="hero-info-subheading">I am a developer</p>
+            <p class="hero-info-subheading">I am a web designer</p>
             <a href="./portfolio.html" type="button" class="hero-info-button">Portfolio</a>
         </div>
         <div class="hero-img">
             <img src="./images/img-1.jpg" alt="">
         </div>
     </section>
+    <!-- End Hero Section  -->
 
     <!-- About section  -->
     <section id="about" class="about container">
         <div class="about-info">
             <h1 class="about-info-heading">About Me</h1>
-            <p class="about-info-desc">Hello , This is Nishit for me . As a IT enginner ,A hard-working self motivated and responsible invidual who is keen to learn . now i was working on a web development .</p>
+            <p class="about-info-desc">Hello I am Nishit Gohil for me as an IT Engineer, A hard-working self motivated and responsible invidual who is keen to learn. now i was working on a Web Development.</p>
             <a href="./ng.pdf" type="button" class="about-info-button">Download Resume</a>
         </div>
         <div class="about-img">
@@ -56,64 +58,62 @@
             </div>
         </div>
     </section>
+    <!-- End About section  -->
 
-    <!-- Projects Section  -->
+    <!-- project Section  -->
     <section id="projects" class="projects container">
         <div class="projects-header">
             <h1 class="projects-header-heading">projects</h1>
-            <p class="projects-header-desc">
-                <h1>Portfolio Site </h1>
-                <h1>Auto Consultation Site </h1>
-                <h1>Moblie Application </h1>
-            </p>
+            <p class="projects-header-desc">Portfolio Site, Auto Consultation Site, Moblie Application</p>
         </div>
         <div class="projects-info">
-            <div class="projects">
-                <div class="projects-card">
-                    <div class="projects-front">
+            <div class="project">
+                <div class="project-card">
+                    <div class="project-front">
                         <i class="fa fa-palette"></i>
-                        <h1 class="projects-front-heading">Web Design</h1>
+                        <h1 class="project-front-heading">Web Design</h1>
                     </div>
-                    <div class="projects-back">
-                        <h1 class="projects-back-heading">Web Design</h1>
-                        <p class="projects-back-desc">All Types of Web Design!</p>
+                    <div class="project-back">
+                        <h1 class="project-back-heading">Web Design</h1>
+                        <p class="project-back-desc">All Types of Web Design! , Single page. Single page designs are websites that convey all of their information on a single webpage. Static website. Dynamic website. Responsive design. Liquid design. Fixed design. F-shape layout.
+                            Z-shape layout!</p>
                     </div>
                 </div>
             </div>
-            <div class="projects">
-                <div class="projects-card">
-                    <div class="projects-front">
+            <div class="project">
+                <div class="project-card">
+                    <div class="project-front">
                         <i class="fa fa-laptop-code"></i>
-                        <h1 class="projects-front-heading">Font End Dev</h1>
+                        <h1 class="project-front-heading">Font End Dev</h1>
                     </div>
-                    <div class="projects-back">
-                        <h1 class="projects-back-heading">Front End Dev</h1>
-                        <p class="projects-back-desc">Client Side !</p>
+                    <div class="project-back">
+                        <h1 class="project-back-heading">Front End Dev</h1>
+                        <p class="project-back-desc">HTML and CSS. JavaScript. Frameworks and Libraries. Version control. Cross-browser and device testing. Web performance optimization (WPO) Search engine optimization (SEO)!</p>
                     </div>
                 </div>
             </div>
-            <div class="projects">
-                <div class="projects-card">
-                    <div class="projects-front">
+            <div class="project">
+                <div class="project-card">
+                    <div class="project-front">
                         <i class="fa fa-building"></i>
-                        <h1 class="projects-front-heading">Clients</h1>
+                        <h1 class="project-front-heading">Client side front end</h1>
                     </div>
-                    <div class="projects-back">
-                        <h1 class="projects-back-heading">Clients</h1>
-                        <p class="projects-back-desc">Clients !</p>
+                    <div class="project-back">
+                        <h1 class="project-back-heading">Client side front end</h1>
+                        <p class="project-back-desc">Chrome DevTools. HTML5 Boilerplate. Sass. AngularJS. jQuery. Visual Studio Code. Git. TypeScript.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- End project Section  -->
 
-
-    <!-- skillsSection  -->
+    <!-- skills Section  -->
     <section id="skills" class="skills container">
         <h1 class="skills-heading">Skills</h1>
-        <a href="./skills.html" type="button" class="skills-button"></a>
+        <a href="./skills.html" type="button" class="skills-button">Programming Skills !!</a>
     </section>
-
+    <!-- End skills Section  -->
 
     <!-- Footer section  -->
     <footer id="footer" class="footer container">
@@ -123,7 +123,7 @@
             <p class="footer-contact-info">Mobile: 8866602281</p>
         </div>
         <div class="footer-social-follow">
-            <h1 class="footer-social-follow-heading">Social Media</h1>
+            <h1 class="footer-social-follow-heading">Follow Me</h1>
             <div class="footer-social-icon">
                 <a href="https://www.facebook.com/nishit.gohel.336"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/nishit_gohil/"><i class="fab fa-instagram-square"></i></a>
