--- a/skills.html
+++ b/skills.html
@@ -11,8 +11,8 @@
 <body>
     <style>
         body {
-            background-color: rgb(17, 17, 27);
-            color: rgb(173, 195, 236);
+            background-color: black;
+            color: whitesmoke;
         }
     </style>
 
@@ -28,6 +28,8 @@
         <li>Java</li>
         <li>Python</li>
         <li>R Programming</li>
+        <li>C#</li>
+        <li>.net</li>
     </ul>
 </h3>
 </body>
