--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="nav-bar" class="container">
         <header class="nav-bar">
             <div class="brand">
-                <a href="#hero">
+                <a href="#hero" style="text-decoration: none;">
                     <h1>Nishit Gohil</h1>
                 </a>
             </div>
@@ -26,6 +26,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
+                    <li><a href="#footer">Contact</a></li>
                 </ul>
             </div>
         </header>
@@ -37,7 +38,7 @@
         <div class="hero-info">
             <h1 class="hero-info-heading">I Design <br>Your Dream</h1>
             <p class="hero-info-subheading">I am a web designer</p>
-            <a href="./portfolio.html" type="button" class="hero-info-button">Portfolio</a>
+            <a href="#projects" type="button" class="hero-info-button">Portfolio</a>
         </div>
         <div class="hero-img">
             <img src="./images/img-1.jpg" alt="">
@@ -115,6 +116,7 @@
     </section>
     <!-- End skills Section  -->
 
+
     <!-- Footer section  -->
     <footer id="footer" class="footer container">
         <div class="footer-contact">
@@ -134,6 +136,7 @@
     </footer>
     <!-- End Footer section  -->
     <script src="./app.js"></script>
+    <script src="#"></script>
 </body>
 
 </html>
