--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nishit Gohil</title>
+    <title>Welcome to Nishit Gohil website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -23,6 +23,7 @@
                     <div class="bar"></div>
                 </div>
                 <ul>
+                    <li><a href="#hero">Home </a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
@@ -41,10 +42,16 @@
             <a href="#projects" type="button" class="hero-info-button">Portfolio</a>
         </div>
         <div class="hero-img">
-            <img src="./images/img-1.jpg" alt="">
+            <img src="./images/img-1.jpg" alt="text">
         </div>
     </section>
     <!-- End Hero Section  -->
+
+    <!-- home Section  -->
+    <section id="home" class="home container">
+        <a href="#home" type="button" class="home-button"></a>
+    </section>
+    <!-- End home Section  -->
 
     <!-- About section  -->
     <section id="about" class="about container">
@@ -65,7 +72,7 @@
     <section id="projects" class="projects container">
         <div class="projects-header">
             <h1 class="projects-header-heading">projects</h1>
-            <p class="projects-header-desc">Portfolio Site, Auto Consultation Site, Moblie Application</p>
+            <p class="projects-header-desc">Web Development, Moblie Application</p>
         </div>
         <div class="projects-info">
             <div class="project">
@@ -89,7 +96,8 @@
                     </div>
                     <div class="project-back">
                         <h1 class="project-back-heading">Front End Dev</h1>
-                        <p class="project-back-desc">HTML and CSS. JavaScript. Frameworks and Libraries. Version control. Cross-browser and device testing. Web performance optimization (WPO) Search engine optimization (SEO)!</p>
+                        <p class="project-back-desc">HTML and CSS. JavaScript. Frameworks and Libraries. Version control. Cross-browser and device testing. Web performance optimization (WPO) Search engine optimization (SEO), Chrome DevTools. HTML5 Boilerplate. Sass. AngularJS. jQuery.
+                            Visual Studio Code. Git. TypeScript.</p>
                     </div>
                 </div>
             </div>
@@ -97,11 +105,11 @@
                 <div class="project-card">
                     <div class="project-front">
                         <i class="fa fa-building"></i>
-                        <h1 class="project-front-heading">Client side front end</h1>
+                        <h1 class="project-front-heading">Work</h1>
                     </div>
                     <div class="project-back">
-                        <h1 class="project-back-heading">Client side front end</h1>
-                        <p class="project-back-desc">Chrome DevTools. HTML5 Boilerplate. Sass. AngularJS. jQuery. Visual Studio Code. Git. TypeScript.</p>
+                        <h1 class="project-back-heading">Work</h1>
+                        <p class="project-back-desc">Portfolio Site, Auto Consultation Site, Moblie Application</p>
                     </div>
                 </div>
             </div>
@@ -111,32 +119,146 @@
 
     <!-- skills Section  -->
     <section id="skills" class="skills container">
-        <h1 class="skills-heading">Skills</h1>
-        <a href="./skills.html" type="button" class="skills-button">Programming Skills !!</a>
+        <div class="container">
+            <div class="row">
+                <div class="">
+                    <h2 class="skills-heading">My skills</h2>
+                </div>
+                <div class="">
+                    <div class="skill-desc">
+                        <p>All Types of Web Design! , Single page. Single page designs are websites that convey all of their information on a single webpage. Static website. Dynamic website. Responsive design. Liquid design. Fixed design. F-shape layout.</p>
+                    </div>
+                </div>
+
+                <div class="skill-box wow fadeInDown" data-wow-delay=".6s">
+                    <label> HTML/CSS</label>
+                    <div class="progress">
+                        <div class="progress-bar" role="progress-bar" aria-valuemin="0" aria-valuenow="90" aria-valuemax="100" style="width: 90%;">
+                            90%
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-box wow fadeInDown" data-wow-delay=".8s">
+                    <label> JavaScript </label>
+                    <div class="progress">
+                        <div class="progress-bar" role="progress-bar" aria-valuemin="0" aria-valuenow="65" aria-valuemax="100" style="width: 75%;">
+                            75%
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 wow fadeInRight">
+                    <div class="skill-box wow fadeInDown" data-wow-delay=".2s">
+                        <label> Java</label>
+                        <div class="progress">
+                            <div class="progress-bar" role="progress-bar" aria-valuemin="0" aria-valuenow="70" aria-valuemax="100" style="width: 70%;">
+                                70%
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-box wow fadeInDown" data-wow-delay=".4s">
+                        <label> Python</label>
+                        <div class="progress">
+                            <div class="progress-bar" role="progress-bar" aria-valuemin="0" aria-valuenow="85" aria-valuemax="100" style="width: 50%;">
+                                50%
+                            </div>
     </section>
     <!-- End skills Section  -->
 
-
     <!-- Footer section  -->
+
     <footer id="footer" class="footer container">
         <div class="footer-contact">
-            <h1 class="footer-contact-heading">Contact With Me</h1>
-            <p class="footer-contact-info">Email: nishitg512000@gamil.com</p>
-            <p class="footer-contact-info">Mobile: 8866602281</p>
+            <h2 class="footer-contact-heading">Get in Touch</h2>
         </div>
-        <div class="footer-social-follow">
-            <h1 class="footer-social-follow-heading">Follow Me</h1>
-            <div class="footer-social-icon">
-                <a href="https://www.facebook.com/nishit.gohel.336"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/nishit_gohil/"><i class="fab fa-instagram-square"></i></a>
-                <a href="https://in.linkedin.com/in/nishit-gohil-9710491a2"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/nishitgohil"><i class="fab fa-github"></i></a>
+
+        <table style="width: 100%; height: 25vh;">
+            <tr>
+                <td>
+                    <div class="footer-contact">
+                        <div class="row">
+                            <div class="footer-contact-info">
+                                <h4>Address</h4>
+                                <p>Surat,Gujarat,INDIA</p>
+                            </div>
+                            <div class="footer-contact-info">
+                                <h4>Call</h4>
+                                <p>+91 8866602281</p>
+                            </div>
+                            <div class="footer-contact-info">
+                                <h4>Email</h4>
+                                <p>nishitg512000@gmail.com</p>
+                            </div>
+                        </div>
+
+                        <div class="footer-social-follow">
+                            <h1 class="footer-social-follow-heading"> </h1>
+                            <div class="footer-social-icon">
+                                <a href="https://www.facebook.com/nishit.gohel.336"><i class="fab fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/nishit_gohil/"><i
+                                        class="fab fa-instagram-square"></i></a>
+                                <a href="https://in.linkedin.com/in/nishit-gohil-9710491a2"><i
+                                        class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/nishitgohil"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="footer-social-follow">
+                        <div class="col-md-6 col-sm-6 wow fadeInRight">
+                            <div class="footer,contact-box">
+                                <div class="footer,contact-form">
+                                    <form class="contact-box">
+                                        <table>
+                                            <div class="form-group">
+                                                <tr>
+                                                    <th colspan="2" style="font-size: 20px;">Contact</th>
+                                                </tr>
+                                                <tr>
+                                                    <td><label>Name</label></td>
+                                                    <td><input type="text" class="form-control"></td>
+                                                </tr>
+                                            </div>
+                                            <div class="form-group">
+                                                <tr>
+                                                    <td><label>Email</label></td>
+                                                    <td><input type="text" class="form-control"></td>
+                                                </tr>
+                                            </div>
+                                            <div class="form-group">
+                                                <tr>
+                                                    <td> <label>Message</label></td>
+                                                    <td><input type="text" class="form-control"></td>
+                                                </tr>
+                                            </div>
+                                            <div class="contact-box">
+                                                <tr>
+                                                    <td colspan="2">
+                                                        <input class="input-btn" type="submit" value="send message">
+                                                </tr>
+                                    </form>
+                                    </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </td>
+            </tr>
+        </table>
+        <div class="footer,contact-box">
+            <div class="footer"><span>
+                    <h2>Copyright © NG, <a href="index.html">ME</h2></a>
+                </span>
             </div>
-        </div>
-    </footer>
-    <!-- End Footer section  -->
-    <script src="./app.js"></script>
-    <script src="#"></script>
+            <!-- End Footer section  -->
+
+            <!-- .js -->
+            <script src="./app.js"></script>
+            <script src="#"></script>
+            <script src="#"></script>
+            <script src="#"></script>
+            <!-- End .js -->
 </body>
 
 </html>
