--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Nishit Gohil website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
@@ -57,7 +57,7 @@
     <section id="about" class="about container">
         <div class="about-info">
             <h1 class="about-info-heading">About Me</h1>
-            <p class="about-info-desc">Hello I am Nishit Gohil for me as an IT Engineer, A hard-working self motivated and responsible invidual who is keen to learn. now i was working on a Web Development.</p>
+            <p class="about-info-desc">Hello I am Nishit Gohil my profession is IT Engineering , A hard-working self motivated and responsible individual who is keen to learn. now I’m working as a Web Developer.</p>
             <a href="./ng.pdf" type="button" class="about-info-button">Download Resume</a>
         </div>
         <div class="about-img">
@@ -212,29 +212,37 @@
                                         <table>
                                             <div class="form-group">
                                                 <tr>
-                                                    <th colspan="2" style="font-size: 20px;">Contact</th>
+                                                    <th colspan="2" style="font-size: 20px;">Contact</th><br><br>
                                                 </tr>
                                                 <tr>
                                                     <td><label>Name</label></td>
-                                                    <td><input type="text" class="form-control"></td>
+                                                    <tr>
+                                                        <td><input type="text" class="form-control"></td>
+                                                    </tr>
                                                 </tr>
                                             </div>
                                             <div class="form-group">
                                                 <tr>
                                                     <td><label>Email</label></td>
-                                                    <td><input type="text" class="form-control"></td>
+                                                    <tr>
+                                                        <td><input type="text" class="form-control"></td>
+                                                    </tr>
                                                 </tr>
                                             </div>
                                             <div class="form-group">
                                                 <tr>
-                                                    <td> <label>Message</label></td>
-                                                    <td><input type="text" class="form-control"></td>
+                                                    <td><label>Message</label></td>
+                                                    <tr>
+                                                        <td><input type="text" class="form-control"></td>
+                                                    </tr>
                                                 </tr>
                                             </div>
+
                                             <div class="contact-box">
                                                 <tr>
                                                     <td colspan="2">
-                                                        <input class="input-btn" type="submit" value="send message">
+                                                        <br></br>
+                                                        <input class="input-btn" type="submit" style="height:30px;width:100px;background-color: white; border:0px solid white; font-weight:bold;font-family:corbel;font-size:20;border-radius:20px;" value="Mail it">
                                                 </tr>
                                     </form>
                                     </table>
