--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                     </div>
                 </td>
                 <td>
+                    <div class="container">
                     <div class="footer-social-follow">
                         <div class="col-md-6 col-sm-6 wow fadeInRight">
                             <div class="footer,contact-box">
