--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- End project Section  -->
 
     <!-- skills Section  -->
-    <section id="skills" class="skills container">
+    <section id="skills" class="skills ,container">
         <div class="container">
             <div class="row">
                 <div class="">
@@ -205,54 +205,54 @@
                 </td>
                 <td>
                     <div class="container">
-                    <div class="footer-social-follow">
-                        <div class="col-md-6 col-sm-6 wow fadeInRight">
-                            <div class="footer,contact-box">
-                                <div class="footer,contact-form">
-                                    <form class="contact-box">
-                                        <table>
-                                            <div class="form-group">
-                                                <tr>
-                                                    <th colspan="2" style="font-size: 20px;">Contact</th><br><br>
-                                                </tr>
-                                                <tr>
-                                                    <td><label>Name</label></td>
+                        <div class="footer-social-follow">
+                            <div class="col-md-6 col-sm-6 wow fadeInRight">
+                                <div class="footer,contact-box">
+                                    <div class="footer,contact-form">
+                                        <form class="contact-box">
+                                            <table>
+                                                <div class="form-group">
                                                     <tr>
-                                                        <td><input type="text" class="form-control"></td>
+                                                        <th colspan="2" style="font-size: 20px;">Contact</th><br><br>
                                                     </tr>
-                                                </tr>
-                                            </div>
-                                            <div class="form-group">
-                                                <tr>
-                                                    <td><label>Email</label></td>
                                                     <tr>
-                                                        <td><input type="text" class="form-control"></td>
+                                                        <td><label>Name</label></td>
+                                                        <tr>
+                                                            <td><input type="text" class="form-control"></td>
+                                                        </tr>
                                                     </tr>
-                                                </tr>
-                                            </div>
-                                            <div class="form-group">
-                                                <tr>
-                                                    <td><label>Message</label></td>
+                                                </div>
+                                                <div class="form-group">
                                                     <tr>
-                                                        <td><input type="text" class="form-control"></td>
+                                                        <td><label>Email</label></td>
+                                                        <tr>
+                                                            <td><input type="text" class="form-control"></td>
+                                                        </tr>
                                                     </tr>
-                                                </tr>
-                                            </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <tr>
+                                                        <td><label>Message</label></td>
+                                                        <tr>
+                                                            <td><input type="text" class="form-control"></td>
+                                                        </tr>
+                                                    </tr>
+                                                </div>
 
-                                            <div class="contact-box">
-                                                <tr>
-                                                    <td colspan="2">
-                                                        <br></br>
-                                                        <input class="input-btn" type="submit" style="height:30px;width:100px;background-color: white; border:0px solid white; font-weight:bold;font-family:corbel;font-size:20;border-radius:20px;" value="Mail it">
-                                                </tr>
-                                    </form>
-                                    </table>
+                                                <div class="contact-box">
+                                                    <tr>
+                                                        <td colspan="2">
+                                                            <br></br>
+                                                            <input class="input-btn" type="submit" style="height:30px;width:100px; border:0px solid white;;" value="Mail it">
+                                                    </tr>
+                                        </form>
+                                        </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    </td>
+                        </td>
             </tr>
         </table>
         <div class="footer,contact-box">
