--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                         </div>
                     </div>
                 </td>
+                <!--
                 <td>
                     <div class="container">
                         <div class="footer-social-follow">
@@ -259,7 +260,7 @@
             <div class="footer"><span>
                     <h2>Copyright © NG, <a href="index.html">ME</h2></a>
                 </span>
-            </div>
+            </div> -->
             <!-- End Footer section  -->
 
             <!-- .js -->
