--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
         <div class="section"></div>
         <div class="section"></div>
         <div class="section"></div>
-        <div class="section"></div>
+        <!-- <div class="section"></div> -->
     </div>
 
 </body>
